--- a/index.html
+++ b/index.html
@@ -6038,9 +6038,9 @@ aria-label="auto"data-ca-label="auto">
       <li data-target="#carousel-example-multi" data-slide-to="0" class="active"></li>
       <li data-target="#carousel-example-multi" data-slide-to="1"></li>
       <li data-target="#carousel-example-multi" data-slide-to="2"></li>
-      <li data-target="#carousel-example-multi" data-slide-to="3"></li>
+      <!--<li data-target="#carousel-example-multi" data-slide-to="3"></li>
       <li data-target="#carousel-example-multi" data-slide-to="4"></li>
-      <li data-target="#carousel-example-multi" data-slide-to="5"></li>
+      <li data-target="#carousel-example-multi" data-slide-to="5"></li>-->
     </ul>
 
 
@@ -6049,7 +6049,7 @@ aria-label="auto"data-ca-label="auto">
       <div class="carousel-item active">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="/static/2020/gif/myManus.png"
+            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/gif/myManus.png"
               alt="Card image cap">
             <div class="card-body">
               <h3 class="card-title ">ManDri</h3>
@@ -6065,7 +6065,7 @@ aria-label="auto"data-ca-label="auto">
           <div class="card mb-2">
             <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.jpeg"
               alt="Card image cap">
-            <div class="card-body">
+            <div class="card-body" style="margin-top:70%">
               <h3 class="card-title font-weight-bold">FindOne</h3>
               <p class="card-text">
                 L'articolo pubblicato su Medium riguardante l'applicazione FindOne.
@@ -6076,67 +6076,22 @@ aria-label="auto"data-ca-label="auto">
         </div>
       </div>
       <div class="carousel-item">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
+        <div class="col-12 col-md-4" >
+          <div class="card mb-2" >
             <img class="card-img-top" src=""
               alt="Card image cap">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">BattleBash</h4>
+            <div class="card-body" style="margin-top:132%">
+              <h3 class="card-title font-weight-bold">BattleBash</h3>
               <p class="card-text">
                 La relazione su BattleBash, il gioco lato client con thread e programmazione con linguaggio C.
               </p>
-              <a href="http://www.mauriziominieri.it/static/2020/articoli/Relazione Progetto Laboratorio Sistemi Operativi.docx" class="btn btn-primary btn-md btn-rounded">Button</a>
+              <a href="http://www.mauriziominieri.it/static/2020/articoli/Relazione Progetto Laboratorio Sistemi Operativi.docx" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
-            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (29).jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">Titolo</h4>
-              <p class="card-text">
 
 
-              </p>
-              <a class="btn btn-primary btn-md btn-rounded">Leggi</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
-            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (30).jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">Titolo</h4>
-              <p class="card-text">
-
-              </p>
-              <a class="btn btn-primary btn-md btn-rounded">Leggi</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="col-12 col-md-4">
-          <div class="card mb-2">
-            <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/img (27).jpg"
-              alt="Card image cap">
-            <div class="card-body">
-              <h4 class="card-title font-weight-bold">Titolo</h4>
-              <p class="card-text">
-
-
-              </p>
-              <a class="btn btn-primary btn-md btn-rounded">Leggi</a>
-            </div>
-          </div>
-        </div>
-      </div>
 
     </div>
 
