--- a/index.html
+++ b/index.html
@@ -6038,8 +6038,8 @@ aria-label="auto"data-ca-label="auto">
       <li data-target="#carousel-example-multi" data-slide-to="0" class="active"></li>
       <li data-target="#carousel-example-multi" data-slide-to="1"></li>
       <li data-target="#carousel-example-multi" data-slide-to="2"></li>
-      <!--<li data-target="#carousel-example-multi" data-slide-to="3"></li>
-      <li data-target="#carousel-example-multi" data-slide-to="4"></li>
+      <li data-target="#carousel-example-multi" data-slide-to="3"></li>
+    <!--  <li data-target="#carousel-example-multi" data-slide-to="4"></li>
       <li data-target="#carousel-example-multi" data-slide-to="5"></li>-->
     </ul>
 
@@ -6049,13 +6049,12 @@ aria-label="auto"data-ca-label="auto">
       <div class="carousel-item active">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/gif/myManus.png"
-              alt="Card image cap">
+            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/gif/myManus.png" alt="ManDri" style="height:300px">
             <div class="card-body">
               <h3 class="card-title ">ManDri</h3>
-              <p class="text-normal">Un paper pubblicato su IEEE riguardante i Manus VR, dei guanti tecnologici ideati per essere utilizzati nella realtà virtuale.
+              <p class="text-normal" style="height:350px">Un paper pubblicato su IEEE riguardante i Manus VR, dei guanti tecnologici ideati per essere utilizzati nella realtà virtuale.
               </p>
-              <a href="" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+              <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-15035-8_84" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
@@ -6063,11 +6062,10 @@ aria-label="auto"data-ca-label="auto">
       <div class="carousel-item">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.jpeg"
-              alt="Card image cap">
-            <div class="card-body" style="margin-top:70%">
+            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.jpeg" alt="FindOne" style="height:300px">
+            <div class="card-body">
               <h3 class="card-title font-weight-bold">FindOne</h3>
-              <p class="card-text">
+              <p class="text-normal" style="height:350px;">
                 L'articolo pubblicato su Medium riguardante l'applicazione FindOne.
               </p>
               <a href="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.pdf" class="btn btn-primary btn-md btn-rounded">Leggi</a>
@@ -6077,15 +6075,29 @@ aria-label="auto"data-ca-label="auto">
       </div>
       <div class="carousel-item">
         <div class="col-12 col-md-4" >
-          <div class="card mb-2" >
-            <img class="card-img-top" src=""
-              alt="Card image cap">
-            <div class="card-body" style="margin-top:132%">
+          <div class="card mb-2">
+            <img class="card-img-top" src="" alt="CCNA1" style="height:300px">
+            <div class="card-body">
               <h3 class="card-title font-weight-bold">BattleBash</h3>
-              <p class="card-text">
+              <p class="text-normal" style="height:350px">
                 La relazione su BattleBash, il gioco lato client con thread e programmazione con linguaggio C.
+                E' stato un progetto universitario per l'esame Laboratorio di Sistemi Operativi.
               </p>
               <a href="http://www.mauriziominieri.it/static/2020/articoli/Relazione Progetto Laboratorio Sistemi Operativi.docx" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="col-12 col-md-4">
+          <div class="card mb-2">
+            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/ccna1.jpg" alt="Card image cap" style="height:300px">
+            <div class="card-body" >
+              <h3 class="card-title font-weight-bold">Cisco CCNA1</h3>
+              <p class="text-normal" style="height:350px">
+                Un form di google che ho creato per permettere a me e ai miei colleghi di esercitarci sul CCNA1 di CISCO. Ho superato l'esame senza problemi.
+              </p>
+              <a href="https://forms.gle/k1bto3Y1S95Wvte47" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
