--- a/index.html
+++ b/index.html
@@ -6054,7 +6054,7 @@ aria-label="auto"data-ca-label="auto">
               <h3 class="card-title ">ManDri</h3>
               <p class="text-normal" style="height:350px">Un paper pubblicato su IEEE riguardante i Manus VR, dei guanti tecnologici ideati per essere utilizzati nella realtà virtuale.
               </p>
-              <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-15035-8_84" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+              <a href="https://link.springer.com/chapter/10.1007%2F978-3-030-15035-8_84" target="_blank" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
@@ -6068,22 +6068,7 @@ aria-label="auto"data-ca-label="auto">
               <p class="text-normal" style="height:350px;">
                 L'articolo pubblicato su Medium riguardante l'applicazione FindOne.
               </p>
-              <a href="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.pdf" class="btn btn-primary btn-md btn-rounded">Leggi</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <div class="col-12 col-md-4" >
-          <div class="card mb-2">
-            <img class="card-img-top" src="" alt="CCNA1" style="height:300px">
-            <div class="card-body">
-              <h3 class="card-title font-weight-bold">BattleBash</h3>
-              <p class="text-normal" style="height:350px">
-                La relazione su BattleBash, il gioco lato client con thread e programmazione con linguaggio C.
-                E' stato un progetto universitario per l'esame Laboratorio di Sistemi Operativi.
-              </p>
-              <a href="http://www.mauriziominieri.it/static/2020/articoli/Relazione Progetto Laboratorio Sistemi Operativi.docx" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+              <a href="http://www.mauriziominieri.it/static/2020/articoli/FindOne-Medium.pdf" target="_blank" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
@@ -6091,13 +6076,28 @@ aria-label="auto"data-ca-label="auto">
       <div class="carousel-item">
         <div class="col-12 col-md-4">
           <div class="card mb-2">
-            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/ccna1.jpg" alt="Card image cap" style="height:300px">
+            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/battlebash.jpg" alt="BattleBash" style="height:300px">
+            <div class="card-body">
+              <h3 class="card-title font-weight-bold">BattleBash</h3>
+              <p class="text-normal" style="height:350px">
+                La relazione su BattleBash, il gioco lato client con thread e programmazione con linguaggio C.
+                E' stato un progetto universitario per l'esame Laboratorio di Sistemi Operativi.
+              </p>
+              <a href="http://www.mauriziominieri.it/static/2020/articoli/Relazione Progetto Laboratorio Sistemi Operativi.docx" target="_blank" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="col-12 col-md-4">
+          <div class="card mb-2">
+            <img class="card-img-top" src="http://www.mauriziominieri.it/static/2020/articoli/ccna1.jpg" alt="CCNA1" style="height:300px">
             <div class="card-body" >
               <h3 class="card-title font-weight-bold">Cisco CCNA1</h3>
               <p class="text-normal" style="height:350px">
                 Un form di google che ho creato per permettere a me e ai miei colleghi di esercitarci sul CCNA1 di CISCO. Ho superato l'esame senza problemi.
               </p>
-              <a href="https://forms.gle/k1bto3Y1S95Wvte47" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+              <a href="https://forms.gle/k1bto3Y1S95Wvte47" target="_blank" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
