--- a/index.html
+++ b/index.html
@@ -6083,7 +6083,7 @@ aria-label="auto"data-ca-label="auto">
                 La relazione su BattleBash, il gioco lato client con thread e programmazione con linguaggio C.
                 E' stato un progetto universitario per l'esame Laboratorio di Sistemi Operativi.
               </p>
-              <a href="http://www.mauriziominieri.it/static/2020/articoli/Relazione Progetto Laboratorio Sistemi Operativi.docx" target="_blank" class="btn btn-primary btn-md btn-rounded">Leggi</a>
+              <a href="http://www.mauriziominieri.it/static/2020/articoli/BattleBash.pdf" target="_blank" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
           </div>
         </div>
