--- a/index.html
+++ b/index.html
@@ -6095,7 +6095,7 @@ aria-label="auto"data-ca-label="auto">
             <div class="card-body" >
               <h3 class="card-title font-weight-bold">Cisco CCNA1</h3>
               <p class="text-normal" style="height:350px">
-                Un form di google che ho creato per permettere a me e ai miei colleghi di esercitarci sul CCNA1 di CISCO. Ho superato l'esame senza problemi.
+                Un form di google che ho creato per permettere a me e ai miei colleghi di esercitarci sul CCNA1 di CISCO. <br> Ho superato l'esame senza problemi.
               </p>
               <a href="https://forms.gle/k1bto3Y1S95Wvte47" target="_blank" class="btn btn-primary btn-md btn-rounded">Leggi</a>
             </div>
