--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/main2.min.css" media="print" onload="this.media='all'">
 <link rel="stylesheet" href="http://www.mauriziominieri.it/static/2020/css/carousel.css">
 <link href="http://www.mauriziominieri.it/static/2020/css/photoFlip.css" rel="stylesheet">
+<!--<link href="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/css/photoFlip.css" rel="stylesheet">-->
 <link href="http://www.mauriziominieri.it/static/2020/css/fonts.css" rel="stylesheet">
 <!--FINE CSS-->
 
@@ -6160,7 +6161,7 @@ aria-label="auto"data-ca-label="auto">
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/CertificatoAppleTeacher.png" alt="Apple Teacher" style="height:100%;">
+                <img id="apple-teacher-image" class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/certificati/CertificatoAppleTeacher.png" alt="Apple Teacher">
               </a>
               <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/static/2020/img/virtualReality.png" target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Swip3 by Unit 9">
                 <div class="c-blocks__item-inner">
@@ -6190,7 +6191,7 @@ aria-label="auto"data-ca-label="auto">
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/gif/battlebash.jpg" alt="" style="height:100%; margin-left:-15%">
+                <img id="battlebash-image" class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/gif/battlebash.jpg" alt="BattleBash">
               </a>
               <a class="cascade-content__item c-blocks__item c-blocks__item--double u-upto-tablet-is-hidden" href="http://www.mauriziominieri.it/static/2020/img/didattica/titoLivio1.jpeg"target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Gaze Effect">
                 <div class="c-blocks__item-inner">
@@ -6200,7 +6201,7 @@ aria-label="auto"data-ca-label="auto">
                   </div>
                 </div>
 
-                <img class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/didattica/titoLivio1.jpeg" alt="" style="width:100%;" >
+                <img id="tito-livio-image" class="c-blocks__item-image" src="http://www.mauriziominieri.it/static/2020/img/didattica/titoLivio1.jpeg" alt="Tito Livio">
               </a>
               <a class="cascade-content__item c-blocks__item u-upto-tablet-is-hidden u-from-desktop-is-hidden" href="#"  target="_blank" data-g-event="irl-story" data-g-action="clicked" data-g-label="Smarter photo albums, without the work">
                 <div class="c-blocks__item-inner">
