--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <ul aria-hidden="true" role="menu">
 <li>
       <a href="http://www.mauriziominieri.it/static/2020/certificati/CurriculumMaurizioMinieri.pdf" target="_blank"  role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="android-10">
-          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Curriculum" class="icon icon--why-android" src="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png" srcset="file:///users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/certificati/curriculum.png 2x" height="200" width="200">
+          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Curriculum" class="icon icon--why-android" src="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png 2x" height="200" width="200">
 </span>Curriculum</a>
     </li>
 <li>
