--- a/index.html
+++ b/index.html
@@ -436,12 +436,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <ul aria-hidden="true" role="menu">
 <li>
       <a href="http://www.mauriziominieri.it/static/2020/certificati/CurriculumMaurizioMinieri.pdf" target="_blank"  role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="android-10">
-          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Curriculum" class="icon icon--why-android" src="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/curriculum.png 2x" height="200" width="200">
+          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Curriculum" class="icon icon--why-android" src="http://www.mauriziominieri.it/static/2020/certificati/curriculum1.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/curriculum1.png 2x" height="200" width="200">
 </span>Curriculum</a>
     </li>
 <li>
       <a href="http://www.mauriziominieri.it/static/2020/certificati/MyTicket.png" target="_blank" role="menuitem" tabindex="-1" data-g-event="main-navigation" data-g-action="clicked" data-g-label="play">
-          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Play" class="icon icon--why-android" src="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png 2x" height="200" width="200">
+          <span class="c-nav__icon u-upto-desktop-is-hidden">    <img alt="Play" class="icon icon--why-android" src="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png" srcset="http://www.mauriziominieri.it/static/2020/certificati/MyTicket1.png 2x" height="200" width="350">
 </span>Biglietto da visita</a>
     </li>
 
@@ -6374,8 +6374,8 @@ aria-label="auto"data-ca-label="auto">
         data-tracking-offset="0">
   <nav class="c-nav c-nav--main" role="navigation">
     <div class="c-nav__header">
-      <a class="logo-google" href="https://www.google.com/" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com" target="_blank">
-        <img alt="Maurizio Minieri" src="https://www.gstatic.com/images/branding/googlelogo/1x/googlelogo_dark_color_92x30dp.png" srcset="https://www.gstatic.com/images/branding/googlelogo/1x/googlelogo_dark_color_92x30dp.png, https://www.gstatic.com/images/branding/googlelogo/2x/googlelogo_dark_color_92x30dp.png 2x">
+      <a href="http://www.mauriziominieri.it" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com" target="_blank">
+            <img src="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/img/icons/maurizio-m-logo.png" height="30" />
       </a>
     </div>
     <ul role="menubar">
