logo-google fixed

--- a/index.html
+++ b/index.html
@@ -6366,7 +6366,7 @@ aria-label="auto"data-ca-label="auto">
 
 
 
-<!--Footer-->
+<!--Footer QUIII-->
 
 <footer class="l-footer" role="contentinfo"
         data-c-tracking-section
@@ -6374,7 +6374,7 @@ aria-label="auto"data-ca-label="auto">
         data-tracking-offset="0">
   <nav class="c-nav c-nav--main" role="navigation">
     <div class="c-nav__header">
-      <a href="http://www.mauriziominieri.it" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com" target="_blank">
+      <a class="logo-maurizio" href="http://www.mauriziominieri.it" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com" target="_blank">
             <img src="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/img/icons/maurizio-m-logo.png" height="30" />
       </a>
     </div>
