--- a/index.html
+++ b/index.html
@@ -6375,7 +6375,7 @@ aria-label="auto"data-ca-label="auto">
   <nav class="c-nav c-nav--main" role="navigation">
     <div class="c-nav__header">
       <a class="logo-maurizio" href="http://www.mauriziominieri.it" data-g-action="click" data-g-event="footer" data-g-label="offsite:google-dot-com" target="_blank">
-            <img src="file:///Users/mauriziominieri/websites/mauriziominieri.github.io/static/2020/img/icons/maurizio-m-logo.png" height="30" />
+            <img src="http://www.mauriziominieri.it/static/2020/img/icons/maurizio-m-logo.png" height="30" />
       </a>
     </div>
     <ul role="menubar">
