didattica links fixed

--- a/didattica.html
+++ b/didattica.html
@@ -479,15 +479,15 @@
     <div class="vc_empty_space" style="height: 30px"><span class="vc_empty_space_inner"></span></div>
     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">                                                             <!--class="nav-link active"-->
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/LinguaggioBinario.pdf" class="nav-link" id="v-pills-cap1-tab" >Capitolo 1</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/LinguaggioBinario.pdf" class="nav-link" id="v-pills-cap1-tab" >Capitolo 1</a>
     <p class="tooltiptext">Codice binario<br>I numeri<br>Le lettere<br>L'immagine<br>Il suono</p></div>
 
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/Hardware.pdf" class="nav-link" id="v-pills-cap1-tab" >Capitolo 2</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/Hardware.pdf" class="nav-link" id="v-pills-cap1-tab" >Capitolo 2</a>
     <p class="tooltiptext">Componenti hardware</p></div>
 
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/Software.pdf" class="nav-link" id="v-pills-cap1-tab" >Capitolo 3</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/Software.pdf" class="nav-link" id="v-pills-cap1-tab" >Capitolo 3</a>
     <p class="tooltiptext">Componenti software</p></div>
 
     <a style="text-align: center; font-size:24px;" id="down-a" class="hvr-icon-forward" href="/static/2020/slides/HearingTest.mp4" target="_blank"><i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Frequenza del suono</a>
@@ -503,22 +503,22 @@
     <div class="vc_empty_space" style="height: 30px"><span class="vc_empty_space_inner"></span></div>
     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">                                                         <!--class="nav-link active"-->
     <div class="tooltipS" style="">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/ProgC_cap1.pdf" class="nav-link" id="v-pills-cap1-tab" >Capitolo 1</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/ProgC_cap1.pdf" class="nav-link" id="v-pills-cap1-tab" >Capitolo 1</a>
     <p class="tooltiptext">Algoritmi<br>Flowcharts<br>Linguaggi di programmazione<br>Il linguaggio C</p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/ProgC_cap2.pdf" class="nav-link" id="v-pills-cap2-tab" >Capitolo 2</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/ProgC_cap2.pdf" class="nav-link" id="v-pills-cap2-tab" >Capitolo 2</a>
     <p class="tooltiptext">Identificatori<br>Variabili<br>Tipi di dato primitivi<br>Statement di assegnamento<br>Espressioni ed operatori<br>Costanti con nome<br>Input/output di base</p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/ProgC_cap3.pdf" class="nav-link" id="v-pills-cap3-tab"  role="tab" aria-controls="v-pills-cap3" aria-selected="false">Capitolo 3</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/ProgC_cap3.pdf" class="nav-link" id="v-pills-cap3-tab"  role="tab" aria-controls="v-pills-cap3" aria-selected="false">Capitolo 3</a>
     <p class="tooltiptext">Statement if-else<br>while<br>do-while<br>for<br>switch</p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/ProgC_cap4.pdf" class="nav-link" id="v-pills-cap4-tab"  role="tab" aria-controls="v-pills-cap4" aria-selected="false">Capitolo 4</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/ProgC_cap4.pdf" class="nav-link" id="v-pills-cap4-tab"  role="tab" aria-controls="v-pills-cap4" aria-selected="false">Capitolo 4</a>
     <p class="tooltiptext">Array<br>Matrici<br>Stringhe</p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/ProgC_esercizi.pdf" class="nav-link" id="v-pills-esercizi-tab"  role="tab" aria-controls="v-pills-esercizi" aria-selected="false">Esercizi</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/ProgC_esercizi.pdf" class="nav-link" id="v-pills-esercizi-tab"  role="tab" aria-controls="v-pills-esercizi" aria-selected="false">Esercizi</a>
     <p class="tooltiptext">Alcuni esercizi di programmazione in linguaggio C molto semplici<br></p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/Flowgorithm Esercizi.rar" class="nav-link" id="v-pills-esercizi-tab"  role="tab" aria-controls="v-pills-esercizi" aria-selected="false" onclick="javascript:return validatePass()">Soluzioni con Flowgorithm</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/Flowgorithm Esercizi.rar" class="nav-link" id="v-pills-esercizi-tab"  role="tab" aria-controls="v-pills-esercizi" aria-selected="false" onclick="javascript:return validatePass()">Soluzioni con Flowgorithm</a>
     <p class="tooltiptext">Alcune soluzioni degli esercizi usando Flowgorithm<br></p></div>
 
 
@@ -534,31 +534,31 @@
     <div class="vc_empty_space" style="height: 30px"><span class="vc_empty_space_inner"></span></div>
     <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">                                                         <!--class="nav-link active"-->
     <div class="tooltipS" style="">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/scratchEsercitazioni.pdf" class="nav-link">Esercizi</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/scratchEsercitazioni.pdf" class="nav-link">Esercizi</a>
     <p class="tooltiptext"></p></div>
     <div class="tooltipS" style="">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/scratchGuida.pdf" class="nav-link">Guida</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/scratchGuida.pdf" class="nav-link">Guida</a>
     <p class="tooltiptext"></p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/scratchIntroduzione1.pdf" class="nav-link">Introduzione 1</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/scratchIntroduzione1.pdf" class="nav-link">Introduzione 1</a>
     <p class="tooltiptext"></p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/scratchIntroduzione2.pdf" class="nav-link">Introduzione 2</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/scratchIntroduzione2.pdf" class="nav-link">Introduzione 2</a>
     <p class="tooltiptext"></p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/scratchIntroduzione3.pdf" class="nav-link">Introduzione 3</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/scratchIntroduzione3.pdf" class="nav-link">Introduzione 3</a>
     <p class="tooltiptext"></p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/scratchComeIniziare.pdf" class="nav-link">Come iniziare</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/scratchComeIniziare.pdf" class="nav-link">Come iniziare</a>
     <p class="tooltiptext"></p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/scratchCosaE.pdf" class="nav-link">Cos'è</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/scratchCosaE.pdf" class="nav-link">Cos'è</a>
     <p class="tooltiptext"></p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/scratchGuidaStudenti.pdf" class="nav-link">Guida all'uso (S)</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/scratchGuidaStudenti.pdf" class="nav-link">Guida all'uso (S)</a>
     <p class="tooltiptext"></p></div>
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/scratchCicli.pdf" class="nav-link">I cicli</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/scratchCicli.pdf" class="nav-link">I cicli</a>
     <p class="tooltiptext"></p></div>
      <div class="tooltipS">
     <a target="_blank" href=" https://scratch.mit.edu/projects/14284722/editor/" class="nav-link">Gioco ping pong</a>
@@ -580,31 +580,31 @@
 
 
     <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/HTML/lezione1.pdf" class="nav-link">Lezione 1</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/HTML/lezione1.pdf" class="nav-link">Lezione 1</a>
     <p class="tooltiptext">Lezione 1</p></div>
 
      <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/HTML/lezione2.pdf" class="nav-link">Lezione 2</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/HTML/lezione2.pdf" class="nav-link">Lezione 2</a>
     <p class="tooltiptext">Lezione 2</p></div>
 
      <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/HTML/lezione3.pdf" class="nav-link">Lezione 3</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/HTML/lezione3.pdf" class="nav-link">Lezione 3</a>
     <p class="tooltiptext">Lezione 3</p></div>
 
      <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/HTML/lezione4.pdf" class="nav-link">Lezione 4</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/HTML/lezione4.pdf" class="nav-link">Lezione 4</a>
     <p class="tooltiptext">Lezione 4</p></div>
 
      <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/HTML/lezione5.pdf" class="nav-link">Lezione 5</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/HTML/lezione5.pdf" class="nav-link">Lezione 5</a>
     <p class="tooltiptext">Lezione 5</p></div>
 
      <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/HTML/lezione6.pdf" class="nav-link">Lezione 6</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/HTML/lezione6.pdf" class="nav-link">Lezione 6</a>
     <p class="tooltiptext">Lezione 6</p></div>
 
      <div class="tooltipS">
-    <a target="_blank" href="http://mauriziominieri.it/didattica/HTML/lezione7.pdf" class="nav-link">Lezione 7</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/HTML/lezione7.pdf" class="nav-link">Lezione 7</a>
     <p class="tooltiptext">Lezione 7</p></div>
 
     <div class="tooltipS">
@@ -1485,7 +1485,7 @@
 
     <a id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/slides/06-colore1.pdf" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Colore1</a>
-    <!--<a id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/didattica/06-colore2.pdf" target="_blank">
+    <!--<a id="down-a" class="hvr-icon-forward" href="http://mauriziominieri.it/static/2020/slides/06-colore2.pdf" target="_blank">
     <i class="fa fa-chevron-circle-right hvr-icon" style="font-size: 20px;"></i>Colore2</a>-->
 
 
@@ -1710,14 +1710,14 @@
     </div></div>
     <div class="vc_empty_space" style="height: 60px"></div>
     <div class="nav flex-column nav-pills" > <!--nav flex-column nav-pills Curva i bordi-->
-    <a target="_blank" href="http://mauriziominieri.it/didattica/ComportamentiThymio.png" class="rob-nav-link">Comportamenti di base</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/conoscereAseba.pdf" class="rob-nav-link">Conoscere ASEBA</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/programmazioneVisuale.pdf" class="rob-nav-link">Programmazione visuale</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/comandiVPL.pdf" class="rob-nav-link">Comandi VPL</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/presentaVPL.pdf" class="rob-nav-link">Presenta VPL</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/ComportamentiThymio.png" class="rob-nav-link">Comportamenti di base</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/conoscereAseba.pdf" class="rob-nav-link">Conoscere ASEBA</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/programmazioneVisuale.pdf" class="rob-nav-link">Programmazione visuale</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/comandiVPL.pdf" class="rob-nav-link">Comandi VPL</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/presentaVPL.pdf" class="rob-nav-link">Presenta VPL</a>
     <a target="_blank" href="https://www.thymio.org/it:thymiodrawing" class="rob-nav-link">THYMIO disegnatore</a>
     <a target="_blank" href="https://www.thymio.org/it:asebalanguage" class="rob-nav-link">Linguaggio ASEBA</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/tutorialAseba.pdf" class="rob-nav-link">ASEBA tutorial</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/tutorialAseba.pdf" class="rob-nav-link">ASEBA tutorial</a>
     </div>
     </div>
 
@@ -1731,12 +1731,12 @@
     </div>
     <div class="vc_empty_space" style="height: 60px"><span class="vc_empty_space_inner"></span></div>
     <div class="nav flex-column nav-pills" >
-    <a target="_blank" download href="http://mauriziominieri.it/didattica/tutorialMBOT.mp4" class="rob-nav-link">mBOT tutorial</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/mBOTManuale.pdf" class="rob-nav-link">mBOT manuale</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/boardMBOT.pdf" class="rob-nav-link">Mother board</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/mBlock_Kids.pdf" class="rob-nav-link">mBlock kids</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/prontuarioMBOT.pdf" class="rob-nav-link">Prontuario per la programmazione di mBot</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/telecomandoMBOT.pdf" class="rob-nav-link">Esercizi tramite telecomando</a>
+    <a target="_blank" download href="http://mauriziominieri.it/static/2020/slides/tutorialMBOT.mp4" class="rob-nav-link">mBOT tutorial</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/mBOTManuale.pdf" class="rob-nav-link">mBOT manuale</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/boardMBOT.pdf" class="rob-nav-link">Mother board</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/mBlock_Kids.pdf" class="rob-nav-link">mBlock kids</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/prontuarioMBOT.pdf" class="rob-nav-link">Prontuario per la programmazione di mBot</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/telecomandoMBOT.pdf" class="rob-nav-link">Esercizi tramite telecomando</a>
     </div>
     </div>
 
@@ -1750,21 +1750,21 @@
     </div>
     <div class="vc_empty_space" style="height: 60px"><span class="vc_empty_space_inner"></span></div>
     <div class="nav flex-column nav-pills" >
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoEdApplicazioni.pdf" class="rob-nav-link">Arduino ed Applicazioni</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoLeBasi.pdf" class="rob-nav-link">Le basi</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoLezione3.pdf" class="rob-nav-link">Il corso (Lezione 3)</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoWiring.pdf" class="rob-nav-link">Manuale di programmazione wiring</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoBaseProgrammazione.pdf" class="rob-nav-link">Elementi base del linguaggio di programmazione</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoGuidaUtenteInesperto.pdf" class="rob-nav-link">Guida per l'utente inesperto</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoGuidaUtenteInesperto2.pdf" class="rob-nav-link">Guida per l'utente inesperto 2</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoIntroduzione.pdf" class="rob-nav-link">Introduzione all'uso</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoProgrammazione.pdf" class="rob-nav-link">Programmazione</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoProgetti1.pdf" class="rob-nav-link">Progetti</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoScheda1.pdf" class="rob-nav-link">Introduzione alla scheda 1</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoScheda2.pdf" class="rob-nav-link">Introduzione alla scheda 2</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoScheda3.pdf" class="rob-nav-link">Introduzione alla scheda 3</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoScheda4.pdf" class="rob-nav-link">Introduzione alla scheda 4</a>
-    <a target="_blank" href="http://mauriziominieri.it/didattica/arduinoScheda5.pdf" class="rob-nav-link">Introduzione alla scheda 5</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoEdApplicazioni.pdf" class="rob-nav-link">Arduino ed Applicazioni</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoLeBasi.pdf" class="rob-nav-link">Le basi</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoLezione3.pdf" class="rob-nav-link">Il corso (Lezione 3)</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoWiring.pdf" class="rob-nav-link">Manuale di programmazione wiring</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoBaseProgrammazione.pdf" class="rob-nav-link">Elementi base del linguaggio di programmazione</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoGuidaUtenteInesperto.pdf" class="rob-nav-link">Guida per l'utente inesperto</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoGuidaUtenteInesperto2.pdf" class="rob-nav-link">Guida per l'utente inesperto 2</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoIntroduzione.pdf" class="rob-nav-link">Introduzione all'uso</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoProgrammazione.pdf" class="rob-nav-link">Programmazione</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoProgetti1.pdf" class="rob-nav-link">Progetti</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoScheda1.pdf" class="rob-nav-link">Introduzione alla scheda 1</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoScheda2.pdf" class="rob-nav-link">Introduzione alla scheda 2</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoScheda3.pdf" class="rob-nav-link">Introduzione alla scheda 3</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoScheda4.pdf" class="rob-nav-link">Introduzione alla scheda 4</a>
+    <a target="_blank" href="http://mauriziominieri.it/static/2020/slides/arduinoScheda5.pdf" class="rob-nav-link">Introduzione alla scheda 5</a>
     </div>
     </div>
     </div>
